tests/snapshots/examples_fixtures/type_system__failing__143_match_bool_missing_false.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/143_match_bool_missing_false.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/143_match_bool_missing_false.flx:4:14
  |
4 |     let _x = match b {
  |              ^^^^^^^^^
5 |         true -> 1
  | ^^^^^^^^^^^^^^^^^
6 |     }
  | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
